# migros-magazin-solver

./: .gitignore  config.py  gunicorn.conf.py  main.py  pyproject.toml  ruff.toml  serve.py
scrapers/: crossword.py  german_words.py  paroli.py  parse_js.py  quiz.py  sudoku.py  util.py
templates/: base.html  index.html
templates/_macros/: arrow.html  crossword.html  grid.html  paroli.html  quiz.html  sudoku.html
