[project]
name = "migros-magazin-solver"
requires-python = "==3.14.*"
version="0.0.0"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "flask>=3.1.3",
    "html5lib>=1.1",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
    "ty>=0.0.58",
]
